--- a/note/macos.html
+++ b/note/macos.html
@@ -71,9 +71,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org69786e6">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgb20d971">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgdc75332">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org84254bc">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgb98cb8e">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orge7a9289">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -98,17 +98,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org69786e6" class="outline-2">
-<h2 id="org69786e6">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org69786e6">
+<div id="outline-container-org84254bc" class="outline-2">
+<h2 id="org84254bc">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org84254bc">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb20d971" class="outline-2">
-<h2 id="orgb20d971">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgb20d971">
+<div id="outline-container-orgb98cb8e" class="outline-2">
+<h2 id="orgb98cb8e">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgb98cb8e">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -128,9 +128,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgdc75332" class="outline-2">
-<h2 id="orgdc75332">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgdc75332">
+<div id="outline-container-orge7a9289" class="outline-2">
+<h2 id="orge7a9289">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orge7a9289">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -175,14 +175,14 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <div class="article-link-date">
-2020년 4월 25일 수정</div>
+2020년 4월 26일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
