--- a/note/object.html
+++ b/note/object.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>셸 - Seorenn</title>
-<meta name="twitter:title" content="셸" />
-<meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
-<link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
+<title>오브젝트 - Seorenn</title>
+<meta name="twitter:title" content="오브젝트" />
+<meta name="og:title" content="오브젝트" />
+<meta name="description" content="오브젝트(Object)의 정의에 대한 글" />
+<meta name="twitter:description" content="오브젝트(Object)의 정의에 대한 글" />
+<meta name="og:description" content="오브젝트(Object)의 정의에 대한 글" />
+<link rel="canonical" href="https://seorenn.github.io/note/object.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/object.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -65,21 +65,55 @@ gtag('config', 'UA-44534026-1');
 </div>
 <section class="content">
 <header>
-<h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<h1>오브젝트</h1>
+<div class="title-date">2020년 4월 25일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#org5d7fcab">사전적 의미</a></li>
+<li><a href="#org2b1d53c">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#orgad47ed5">컴퓨터 프로그래밍 개념 2</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org5d7fcab" class="outline-2">
+<h2 id="org5d7fcab">사전적 의미</h2>
+<div class="outline-text-2" id="text-org5d7fcab">
+<blockquote>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
+물건, 물체
+</p>
+</blockquote>
+<p>
+주로 이런 의미로 쓰이지만, 목적이나 목표를 의미하기도 한다.
+</p>
+</div>
+</div>
+<div id="outline-container-org2b1d53c" class="outline-2">
+<h2 id="org2b1d53c">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org2b1d53c">
+<p>
+오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
+클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
 </p>
 
 <p>
-대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
+사실상 <a href="instance.html">인스턴스</a>와 동일하지만 OOP에 한정된 약간은 좁은 범위의 <a href="instance.html">인스턴스</a>다.
 </p>
-
+</div>
+</div>
+<div id="outline-container-orgad47ed5" class="outline-2">
+<h2 id="orgad47ed5">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-orgad47ed5">
 <p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
+C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
+실제로 확장자가 <code>.o</code> 이다.
+이 파일을 링커로 합치면 일반적인 라이브러리 파일이나 실행 파일이 된다.
 </p>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
@@ -108,86 +142,9 @@ gtag('config', 'UA-44534026-1');
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
 <div class="article-link-date">
 2020년 4월 26일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/grep.html">Grep</a></h2>
-<div class="article-link-date">
-2020년 4월 24일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
