--- a/index.html
+++ b/index.html
@@ -113,6 +113,48 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/instance.html">인스턴스</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/object.html">오브젝트</a></h2>
+<div class="article-link-date">
+2020년 4월 25일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
@@ -134,51 +176,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs-lisp-functions.html">Emacs Lisp Functions</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 4월 24일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/grep.html">Grep</a></h2>
-<div class="article-link-date">
-2020년 4월 24일 수정</div>
 </div>
 </div>
 </div>
